--- a/css/tw/out.css
+++ b/css/tw/out.css
@@ -2523,6 +2523,11 @@ textarea.form-control.is-invalid {
   margin-right: 10px;
 }
 
+.mx-\[4px\] {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -2585,6 +2590,10 @@ textarea.form-control.is-invalid {
   margin-bottom: 0.75rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -2617,6 +2626,10 @@ textarea.form-control.is-invalid {
   margin-left: 1.5rem;
 }
 
+.ml-\[12px\] {
+  margin-left: 12px;
+}
+
 .ml-\[30px\] {
   margin-left: 30px;
 }
@@ -2647,6 +2660,14 @@ textarea.form-control.is-invalid {
 
 .mr-6 {
   margin-right: 1.5rem;
+}
+
+.mr-\[0\.5rem\] {
+  margin-right: 0.5rem;
+}
+
+.mr-\[1px\] {
+  margin-right: 1px;
 }
 
 .mr-\[6px\] {
@@ -3126,6 +3147,10 @@ textarea.form-control.is-invalid {
   min-width: max-content;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .max-w-\[200px\] {
   max-width: 200px;
 }
@@ -3556,6 +3581,10 @@ textarea.form-control.is-invalid {
   border-radius: 50%;
 }
 
+.rounded-\[5px\] {
+  border-radius: 5px;
+}
+
 .rounded-\[999px\] {
   border-radius: 999px;
 }
@@ -3641,6 +3670,10 @@ textarea.form-control.is-invalid {
 
 .border-\[14px\] {
   border-width: 14px;
+}
+
+.border-\[1px\] {
+  border-width: 1px;
 }
 
 .border-b {
@@ -3756,6 +3789,11 @@ textarea.form-control.is-invalid {
   border-color: rgb(163 163 163 / var(--tw-border-opacity));
 }
 
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 116 217 / var(--tw-border-opacity));
+}
+
 .border-red-300 {
   --tw-border-opacity: 1;
   border-color: rgb(252 165 165 / var(--tw-border-opacity));
@@ -3852,6 +3890,15 @@ textarea.form-control.is-invalid {
   background-color: rgb(0 104 195 / var(--tw-bg-opacity));
 }
 
+.bg-clight {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 186 236 / var(--tw-bg-opacity));
+}
+
+.bg-clight\/20 {
+  background-color: rgb(128 186 236 / 0.2);
+}
+
 .bg-cnormal {
   --tw-bg-opacity: 1;
   background-color: rgb(0 116 217 / var(--tw-bg-opacity));
@@ -3898,6 +3945,11 @@ textarea.form-control.is-invalid {
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 116 217 / var(--tw-bg-opacity));
 }
 
 .bg-red-100 {
@@ -3976,6 +4028,10 @@ textarea.form-control.is-invalid {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -4165,6 +4221,10 @@ textarea.form-control.is-invalid {
   padding-bottom: 0px;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -4191,6 +4251,10 @@ textarea.form-control.is-invalid {
 
 .pl-\[18px\] {
   padding-left: 18px;
+}
+
+.pl-\[42px\] {
+  padding-left: 42px;
 }
 
 .pl-\[50px\] {
@@ -4274,6 +4338,10 @@ textarea.form-control.is-invalid {
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
+}
+
+.text-\[0\.875rem\] {
+  font-size: 0.875rem;
 }
 
 .text-\[0\.8rem\] {
@@ -4468,6 +4536,11 @@ textarea.form-control.is-invalid {
   color: rgb(249 250 251 / var(--tw-text-opacity)) !important;
 }
 
+.\!text-primary {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 116 217 / var(--tw-text-opacity)) !important;
+}
+
 .\!text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -4579,6 +4652,11 @@ textarea.form-control.is-invalid {
   color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 
+.text-neutral-100 {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 245 / var(--tw-text-opacity));
+}
+
 .text-neutral-200 {
   --tw-text-opacity: 1;
   color: rgb(229 229 229 / var(--tw-text-opacity));
@@ -4622,6 +4700,11 @@ textarea.form-control.is-invalid {
 .text-orange-600 {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
 }
 
 .text-red-800 {
@@ -4826,6 +4909,12 @@ textarea.form-control.is-invalid {
   transition-duration: 150ms;
 }
 
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .delay-\[0ms\] {
   transition-delay: 0ms;
 }
@@ -5016,6 +5105,11 @@ textarea.form-control.is-invalid {
   border-color: rgb(220 76 100 / var(--tw-border-opacity)) !important;
 }
 
+.checked\:border-primary:checked {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 116 217 / var(--tw-border-opacity));
+}
+
 .checked\:\!bg-\[\#14a44d\]:checked {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(20 164 77 / var(--tw-bg-opacity)) !important;
@@ -5024,6 +5118,11 @@ textarea.form-control.is-invalid {
 .checked\:\!bg-\[\#dc4c64\]:checked {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(220 76 100 / var(--tw-bg-opacity)) !important;
+}
+
+.checked\:bg-primary:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 116 217 / var(--tw-bg-opacity));
 }
 
 .checked\:before\:opacity-\[0\.16\]:checked::before {
@@ -5169,6 +5268,10 @@ textarea.form-control.is-invalid {
   background-color: rgb(128 186 236 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-clight\/40:hover {
+  background-color: rgb(128 186 236 / 0.4);
+}
+
 .hover\:bg-cnormal:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 116 217 / var(--tw-bg-opacity));
@@ -5209,6 +5312,16 @@ textarea.form-control.is-invalid {
 }
 
 .hover\:text-cnormal:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
+}
+
+.hover\:text-neutral-50:hover {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
+.hover\:text-primary:hover {
   --tw-text-opacity: 1;
   color: rgb(0 116 217 / var(--tw-text-opacity));
 }
@@ -5296,6 +5409,11 @@ textarea.form-control.is-invalid {
   border-color: rgb(0 104 195 / var(--tw-border-opacity));
 }
 
+.focus\:border-primary:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 116 217 / var(--tw-border-opacity));
+}
+
 .focus\:\!bg-\[\#eee\]:focus {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity)) !important;
@@ -5314,6 +5432,11 @@ textarea.form-control.is-invalid {
   background-color: rgb(0 81 152 / var(--tw-bg-opacity));
 }
 
+.focus\:bg-clight:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 186 236 / var(--tw-bg-opacity));
+}
+
 .focus\:bg-neutral-100:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
@@ -5324,6 +5447,11 @@ textarea.form-control.is-invalid {
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
+.focus\:bg-slate-50:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
 .focus\:text-\[\#3b71ca\]:focus {
   --tw-text-opacity: 1;
   color: rgb(59 113 202 / var(--tw-text-opacity));
@@ -5332,6 +5460,16 @@ textarea.form-control.is-invalid {
 .focus\:text-gray-700:focus {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.focus\:text-neutral-50:focus {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
+.focus\:text-primary:focus {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
 }
 
 .focus\:text-white:focus {
@@ -5566,6 +5704,11 @@ textarea.form-control.is-invalid {
   background-color: rgb(128 186 236 / var(--tw-bg-opacity));
 }
 
+.active\:text-neutral-50:active {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
 .active\:text-white:active {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -5585,6 +5728,11 @@ textarea.form-control.is-invalid {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:outline-none:active {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .disabled\:pointer-events-none:disabled {
@@ -5741,6 +5889,11 @@ textarea.form-control.is-invalid {
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 
+.group[data-te-datepicker-cell-selected] .group-\[\[data-te-datepicker-cell-selected\]\]\:bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 116 217 / var(--tw-bg-opacity));
+}
+
 .group[data-te-datepicker-cell-selected] .group-\[\[data-te-datepicker-cell-selected\]\]\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -5785,6 +5938,11 @@ textarea.form-control.is-invalid {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+.peer:focus ~ .peer-focus\:text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
+}
+
 .data-\[te-datepicker-cell-disabled\]\:pointer-events-none[data-te-datepicker-cell-disabled] {
   pointer-events: none;
 }
@@ -5795,6 +5953,10 @@ textarea.form-control.is-invalid {
 
 .data-\[te-carousel-fade\]\:z-\[1\][data-te-carousel-fade] {
   z-index: 1;
+}
+
+.data-\[te-collapse-show\]\:block[data-te-collapse-show] {
+  display: block;
 }
 
 .data-\[te-input-state-active\]\:block[data-te-input-state-active] {
@@ -5905,6 +6067,11 @@ textarea.form-control.is-invalid {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.data-\[te-sidenav-state-active\]\:text-neutral-50[data-te-sidenav-state-active] {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
 .data-\[te-carousel-fade\]\:opacity-0[data-te-carousel-fade] {
   opacity: 0;
 }
@@ -5915,6 +6082,11 @@ textarea.form-control.is-invalid {
 
 .data-\[te-select-open\]\:opacity-100[data-te-select-open] {
   opacity: 1;
+}
+
+.data-\[te-sidenav-state-focus\]\:outline-none[data-te-sidenav-state-focus] {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .data-\[te-carousel-fade\]\:duration-\[600ms\][data-te-carousel-fade] {
@@ -5931,6 +6103,15 @@ textarea.form-control.is-invalid {
 
 .data-\[te-datepicker-cell-disabled\]\:hover\:cursor-default:hover[data-te-datepicker-cell-disabled] {
   cursor: default;
+}
+
+.group[data-te-sidenav-slim-collapsed='true'] .group-\[\&\[data-te-sidenav-slim-collapsed\=\'true\'\]\]\:data-\[te-sidenav-slim\=\'false\'\]\:hidden[data-te-sidenav-slim='false'] {
+  display: none;
+}
+
+.group[data-te-datepicker-cell-focused] .group-\[\[data-te-datepicker-cell-focused\]\]\:data-\[te-datepicker-cell-selected\]\:bg-primary[data-te-datepicker-cell-selected] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 116 217 / var(--tw-bg-opacity));
 }
 
 .group\/validation[data-te-was-validated] .group-data-\[te-was-validated\]\/validation\:mb-4 {
@@ -5987,6 +6168,11 @@ textarea.form-control.is-invalid {
 .group[data-te-input-focused] .group-data-\[te-input-focused\]\:border-\[\#dc4c64\] {
   --tw-border-opacity: 1;
   border-color: rgb(220 76 100 / var(--tw-border-opacity));
+}
+
+.group[data-te-input-focused] .group-data-\[te-input-focused\]\:border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 116 217 / var(--tw-border-opacity));
 }
 
 .group[data-te-input-focused] .group-data-\[te-input-focused\]\:border-white {
@@ -6120,6 +6306,11 @@ textarea.form-control.is-invalid {
 .peer[data-te-input-focused] ~ .peer-data-\[te-input-focused\]\:\!text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.peer[data-te-input-focused] ~ .peer-data-\[te-input-focused\]\:text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
 }
 
 :is([dir="rtl"] .rtl\:\!left-auto) {
@@ -6274,6 +6465,16 @@ textarea.form-control.is-invalid {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+:is(.dark .dark\:checked\:border-primary:checked) {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 116 217 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:checked\:bg-primary:checked) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 116 217 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:hover\:\!bg-\[\#555\]:hover) {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(85 85 85 / var(--tw-bg-opacity)) !important;
@@ -6385,6 +6586,11 @@ textarea.form-control.is-invalid {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+:is(.dark .peer:focus ~ .dark\:peer-focus\:text-primary) {
+  --tw-text-opacity: 1;
+  color: rgb(0 116 217 / var(--tw-text-opacity));
+}
+
 :is(.dark .dark\:data-\[te-buttons-timepicker\]\:bg-zinc-700[data-te-buttons-timepicker]) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
@@ -6428,26 +6634,13 @@ textarea.form-control.is-invalid {
 }
 
 @media (min-width: 640px) {
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .sm\:p-4 {
     padding: 1rem;
-  }
-
-  .sm\:p-6 {
-    padding: 1.5rem;
   }
 
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
-  }
-
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
   }
 }
 
@@ -6473,8 +6666,8 @@ textarea.form-control.is-invalid {
     width: 330px;
   }
 
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -6485,18 +6678,9 @@ textarea.form-control.is-invalid {
     padding: 1.5rem;
   }
 
-  .md\:p-8 {
-    padding: 2rem;
-  }
-
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .md\:pr-1 {
@@ -6533,26 +6717,23 @@ textarea.form-control.is-invalid {
     width: 520px;
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:p-10 {
-    padding: 2.5rem;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:p-8 {
     padding: 2rem;
   }
 
-  .lg\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
@@ -6771,6 +6952,11 @@ textarea.form-control.is-invalid {
 
 .\[\&\>svg\]\:fill-neutral-500>svg {
   fill: #737373;
+}
+
+.\[\&\>svg\]\:text-neutral-100>svg {
+  --tw-text-opacity: 1;
+  color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:\[\&\>svg\]\:fill-white>svg) {
